turbopack/crates/turbo-tasks-macros-tests/tests/derive_non_local_value/fail_simple_enum.rs
#![allow(dead_code)]

use turbo_tasks::NonLocalValue;

struct UnresolvedValue;

#[derive(NonLocalValue)]
enum ContainsUnresolvedValue {
    Unit,
    Unnamed(UnresolvedValue),
    Named { a: UnresolvedValue },
}

fn main() {}
